--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,51 +9,51 @@
     </head>
     <body>
         {% include 'blog/navbar.html' %}
-    
+
         <div class="container my-3">
+            <!-- Left: Main Content | Right: Search and Categories Widgets -->
             <div class="row">
+                <!-- Main Area -->
                 <div class="col-md-8 col-lg-9" id="main-area">
                     {% block main_area %}
                     {% endblock %}
                 </div>
-                
+
+                <!-- Right Widgets (Search and Categories) -->
                 <div class="col-md-4 col-lg-3">
                     <!-- Search Widget -->
                     <div class="card my-4">
-                        <h5 class="card-header">Search</h5>
+                        <h5 class="card-header">상품 검색</h5>
                         <div class="card-body">
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Search for..." id="search-input">
                                 <span class="input-group-btn">
-                                    <button class="btn btn-secondary" type="button" onclick="searchPost();">Go!</button>
+                                    <button class="btn btn-secondary" type="button" onclick="searchPost();">검색</button>
                                 </span>
                             </div>
                         </div>
                     </div>
-    
+
                     <!-- Categories Widget -->
                     <div class="card my-4" id="categories-card">
-                        <h5 class="card-header">Categories</h5>
+                        <h5 class="card-header">상품 종류</h5>
                         <div class="card-body">
-                            <div class="row">
-                                <div>
-                                    <ul >
-                                        {% for category in categories %}
-                                        <li>
-                                            <a href="{{ category.get_absolute_url }}">{{ category }} ({{ category.post_set.count }})</a>
-                                        </li>
-                                        {% endfor %}
-                                        <li>
-                                            <a href="/blog/category/no_category/">미분류 ({{ no_category_post_count }})</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                            <ul>
+                                {% for category in categories %}
+                                <li>
+                                    <a href="{{ category.get_absolute_url }}">{{ category }} ({{ category.post_set.count }})</a>
+                                </li>
+                                {% endfor %}
+                                <li>
+                                    <a href="/blog/category/no_category/">미분류 ({{ no_category_post_count }})</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
         <script>
             function searchPost(){
                 let searchValue=document.getElementById('search-input').value.trim();
@@ -71,8 +71,9 @@
                 }
             });
         </script>
-        {% include 'blog/footer.html' %}
         
+        {% include 'blog/footer.html' %}
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
     </body>
