--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -17,6 +17,7 @@
         <div class="card mb-4" id="post-{{ p.pk }}">
             {% if p.head_image %}
                 <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image" />
+                <img src="{{ product.image.url }}" class="card-img" alt="Product Image">
             {% else %}
                 <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
             {% endif %}
