--- a/project/templates/project/footer.html
+++ b/project/templates/project/footer.html
@@ -1,8 +1,9 @@
 <!-- Footer -->
+{% load static %}
 <footer class="py-3">
     <div class="container">
-        <p class="m-0 text-center text-white">
-        상명대학교 스마트정보통신공학과
+        <p class="m-0 text-center text-white" style="font-size: 10px; color: #b0b0b0 !important;" >
+            <img src="{% static 'images/PoweredByTensorFlow.png' %}" alt="TensorFlow Logo" width="100">&nbsp;<img src="{% static 'images/img-logo.png' %}" alt="TensorFlow Logo" width="80">
         </p>
     </div>
     <!-- /.container -->
